# mmap_allocator

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README
.github/workflows/: build_and_test.yaml
include/: constants.h  default_config.h  heap.h  list.h  log.h  mmap_mgr.h  profiling.h
src/: bigmaac.c  default_config.c  heap.c  mmap_allocator.c  mmap_mgr.c  profiling.c
src/mmap_allocator/: constants.h  default_config.c  default_config.h  heap.c  heap.h  list.h  mmap_allocator.c  mmap_mgr.c  mmap_mgr.h  profiling.c  profiling.h  std_binding.h
test/: Makefile  README.md  bad.c  c_test.c  numpy_test.py  test  test.c
